--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "cors": "^2.8.5",
         "cryptr": "^6.0.3",
         "express": "^4.17.1",
-        "mongodb": "^3.7.4"
+        "mongodb": "^3.7.4",
+        "socket.io": "^4.7.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
